# crudal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
crudal/: __init__.py  base.py  base_async.py  base_sync.py  types.py  utils.py
crudal/operations/: __init__.py  base.py  delete.py  find.py  update.py
examples/: 1-basic.py
tests/: conftest.py  test_basic.py  test_find.py
tests/async/: test_async_basic.py  test_async_update.py
tests/async_tests/: test_async_basic.py  test_async_find.py  test_async_integrated_session.py  test_async_update.py
tests/sync/: test_update.py
tests/sync_tests/: test_basic.py  test_find.py  test_integrated_session.py  test_update.py
