[tool.poetry]
name = "crudal"
version = "0.2.0"
description = "CRUD operations for SQLAlchemy models"
authors = ["andrewsap <andrewsapw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.7"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.0"
ipython = "^8.11.0"
aiosqlite = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
